Fix card navigation on safari

--- a/src/components/featured-place-card/featured-place-card-styles.module.scss
+++ b/src/components/featured-place-card/featured-place-card-styles.module.scss
@@ -99,6 +99,7 @@ $card-content-max-height: 220px;
   position: relative;
   flex-grow: 1;
   width: 100%;
+  height: 350px;
   max-width: $card-max-width;
   background-color: white;
   padding: 60px 40px 0px;
